--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -7,7 +7,9 @@
     text-align: left !important;
     padding-left: 15px !important;
 }
-
+.select2-drop-active{
+    border: none !important;
+}
 .mar-rgt-space {
     margin: 0 !important;
 }
