--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -12,71 +12,70 @@
                 </div>
 
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <input id="registrationNo" type="text" ng-model="truckRegNo"
-                               uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"
-                               class="form-control custom-form-control" typeahead-min-length="1"
-                               typeahead-on-select="selectTruckId($item)"
-                               typeahead-select-on-exact="true" placeholder="Vehicle Number*"
-                               typeahead-no-results="noTrucks" autocomplete="false">
-
-                        <div ng-show="noTrucks && truckRegNo.length" class="mt-5">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
+                    <div class="col-xs-12 select-box">
+                        <ui-select ng-model="trip.registrationNo" theme="select2"
+                                   style="min-width: 390px;"
+                                   title="Choose a Truck" append-to-body="true">
+                            <ui-select-match placeholder="Select a Truck*" class="form-control custom-form-control">
+                                {{$select.selected.registrationNo || truckRegNo}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="truck in trucks | propsFilter: {registrationNo: $select.search}">
+                                <div ng-bind-html="truck.registrationNo | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
+
                     <div class="clearfix"></div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <input type="text" id="driverId" ng-model="driverId"
-                               uib-typeahead="driver.fullName for driver in drivers | filter:$viewValue"
-                               class="form-control custom-form-control" typeahead-min-length="1"
-                               typeahead-on-select="selectTruckDriver($item);"
-                               typeahead-select-on-exact="true" placeholder="Driver Name*"
-                               typeahead-no-results="noDriver" autocomplete="false">
-                        <div ng-show="noDriver">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
+                    <div class="col-xs-12 select-box">
+                        <ui-select ng-model="trip.driverId" theme="select2"
+                                   style="min-width: 390px;"
+                                   title="Choose a person" append-to-body="true">
+                            <ui-select-match placeholder="Select a Driver*" class="form-control custom-form-control">
+                                {{$select.selected.fullName || driverName}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="driver in drivers | propsFilter: {fullName: $select.search}">
+                                <div ng-bind-html="driver.fullName | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
 
-                    <div class="col-xs-12 pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <input type="text" id="bookedFor" ng-model="partyName"
-                               uib-typeahead="party.name for party in parties | filter:$viewValue"
-                               class="form-control custom-form-control" typeahead-min-length="1"
-                               typeahead-on-select="selectParty($item);"
-                               typeahead-select-on-exact="true" placeholder="Party Name*"
-                               typeahead-no-results="noBooked" autocomplete="false">
-                        <div ng-show="noBooked">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
+                    <div class="col-xs-12 select-box">
+                        <ui-select ng-model="trip.partyId" theme="select2" ng-change="selectParty(trip)"
+                                   style="min-width: 390px;"
+                                   title="Choose a Party" append-to-body="true">
+                            <ui-select-match placeholder="Select a Party*" class="form-control custom-form-control">
+                                {{$select.selected.name || partyName}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="party in parties | propsFilter: {name: $select.search}" >
+                                <div ng-bind-html="party.name | highlight: $select.search" ></div>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
                 </div>
 
 
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <input id="tripLane" type="text" ng-model="trip.tripLane"
-                               uib-typeahead="tripLane.name for tripLane in tripLanesList | filter:$viewValue"
-                               class="form-control custom-form-control" typeahead-min-length="1"
-                               typeahead-on-select="selectTripLane($item)"
-                               typeahead-select-on-exact="true" typeahead-no-results="noTlane"
-                               placeholder="Traip Lane*" autocomplete="false">
-
-                        <div ng-show="noTlane">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
-
+                    <div class="col-xs-12 select-box">
+                        <ui-select ng-model="trip.tripLane" theme="select2"
+                                   style="min-width: 390px;"
+                                   title="Select a Trip Lane" append-to-body="true">
+                            <ui-select-match placeholder="Select a Trip Lane*" class="form-control custom-form-control">
+                                {{$select.selected.name || trip.tripLane}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="tripLane in tripLanes | propsFilter: {name: $select.search}">
+                                <div ng-bind-html="tripLane.name | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
+
                 </div>
 
             </div>
