--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -4,7 +4,8 @@
         <div class="col-sm-6 col-xs-12 mt-10">
             <div class="form-group col-xs-12">
                 <div class="col-xs-12 styling-input-list">
-                    <input type="text" class="form-control custom-form-control" ng-readonly="userType==='group'" ng-disabled="userType==='group'" ng-model="truck.registrationNo"/>
+                    <input type="text" class="form-control custom-form-control" ng-readonly="userType==='group'"
+                           ng-disabled="userType==='group'" ng-model="truck.registrationNo"/>
                     <label class="focus-effect-for-input" aria-hidden="true">Truck Number</label>
                 </div>
             </div>
@@ -26,42 +27,22 @@
                     <label class="focus-effect-for-input" aria-hidden="true">Modal and Year</label>
                 </div>
             </div>
-
             <div class="form-group col-xs-12 ">
-
-                <!--<div class="col-xs-12 select-box">-->
-
-                <!--<ui-select ng-model="driverName" theme="select2"-->
-                <!--style="min-width: 390px;"-->
-                <!--title="Choose a person" append-to-body="true">-->
-                <!--<ui-select-match placeholder="Select a Driver" class="form-control custom-form-control">-->
-                <!--{{$select.selected.fullName}}-->
-                <!--</ui-select-match>-->
-                <!--<ui-select-choices-->
-                <!--repeat="driver in drivers | propsFilter: {fullName: $select.search}">-->
-                <!--&lt;!&ndash;<span ng-click="selectDriverId($index);"></span>&ndash;&gt;-->
-                <!--<div ng-bind-html="driver.fullName | highlight: $select.search"></div>-->
-                <!--</ui-select-choices>-->
-                <!--</ui-select>-->
-
-                <!--</div>-->
-
-
-                <div class="col-xs-12">
-                    <input id="city" type="text" ng-model="driverName"
-                           uib-typeahead="driver.fullName for driver in drivers | filter:$viewValue"
-                           class="form-control custom-form-control" typeahead-min-length="1"
-                           typeahead-on-select="selectDriverId($item)" typeahead-select-on-exact="true"
-                           typeahead-no-results="noDriver" autocomplete="false" placeholder="Assign Driver">
-                    <div ng-show="noDriver">
-                        <i class="glyphicon glyphicon-remove red"></i>
-                        <span class="red"> No Results Found </span>
-                    </div>
+                <div class="col-xs-12 select-box">
+                    <ui-select ng-model="truck.driverId" theme="select2"
+                               style="min-width: 390px;"
+                               title="Choose a person" append-to-body="true">
+                        <ui-select-match placeholder="Select a Driver*" class="form-control custom-form-control">
+                            {{$select.selected.fullName || driverName}}
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="driver in drivers | propsFilter: {fullName: $select.search}">
+                            <div ng-bind-html="driver.fullName | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
                 </div>
             </div>
-
         </div>
-
         <div class="col-sm-6 col-xs-12 mt-10">
 
             <div class="form-group col-xs-12">
