--- a/client/views/index.html
+++ b/client/views/index.html
@@ -157,6 +157,7 @@
 <script src="js/modules/groupMap.js"></script>
 <script src="js/modules/dashBoardModule.js"></script>
 <script src="js/modules/GpsSettingsCrtl.js"></script>
+<script src="js/modules/gpsModule.js"></script>
 
 </body>
 </html>
