adding secrets, get location from google, gmail login(hold)

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -104,9 +104,8 @@
     </div>
 </div>
     <div ng-if="subTab!= 'ERP'" style="height: 100%;">
-
-                     <ui-view></ui-view>
-                 </div>
+        <ui-view></ui-view>
+    </div>
 
 
 </span>
@@ -157,6 +156,7 @@
 <script src="js/modules/trackMapModule.js"></script>
 <script src="js/modules/groupMap.js"></script>
 <script src="js/modules/dashBoardModule.js"></script>
+<script src="js/modules/GpsSettingsCrtl.js"></script>
 
 </body>
 </html>
