--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -60,6 +60,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 sign-in">
+                    <!--<a href="http://localhost:2000/login/google" target="_self">Google</a>-->
                     <button type="submit" class="sign-in-btn btn-primary btn" ng-click="login()">Submit</button>
                 </div>
             </div>
