--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -6,7 +6,7 @@
             <div class="col-sm-8">
                 <form>
                 <div class="input-group stylish-input-group">
-                    <input type="text" ng-model="driver2"  class="form-control" placeholder="Search">
+                    <input type="text" ng-model="driver2"  class="form-control" placeholder="Search By Driver Name">
                     <span class="input-group-addon">
                         <button type="submit" ng-click="searchByDriverName(driver2)">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
