--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -5,7 +5,7 @@
         <div class="col-sm-8">
             <form>
             <div class="input-group stylish-input-group">
-                <input type="text"  ng-model="partyName1"class="form-control" placeholder="Search">
+                <input type="text"  ng-model="partyName1"class="form-control" placeholder="Search By Party Name">
                 <span class="input-group-addon">
                         <button type="submit" ng-click="searchByPartyName(partyName1);">
                               <i class="fa fa-search sear" aria-hidden="true"></i>
