--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -7,7 +7,7 @@
                 <div class="col-sm-8">
                     <form>
                     <div class="input-group stylish-input-group">
-                        <input type="text" class="form-control" ng-model="truckNumber1"  placeholder="Search">
+                        <input type="text" class="form-control" ng-model="truckNumber1"  placeholder="Search By Vehicle Number">
                         <span class="input-group-addon">
                         <button type="submit" ng-click="searchByVechicleNumber(truckNumber1);">
                                 <i class="fa fa-search sear" aria-hidden="true"></i>
