--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -7,7 +7,7 @@
                 <form>
                     <div class="input-group stylish-input-group">
                         <input type="text" ng-model="truckName1" class="form-control"
-                               placeholder="Search by truck number">
+                               placeholder="Search By Truck Number">
                         <span class="input-group-addon">
                         <button type="submit" ng-click="searchByTruckName(truckName1);">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
