Removed Unnecessary Conditions

--- a/client/views/partials/reports/expenseByVehicles.html
+++ b/client/views/partials/reports/expenseByVehicles.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="vehicleExpenses(); erpDashboard();">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="vehicleExpenses(); erpDashboard();getAllTrucks();">
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel" ui-sref="reports">
             <div class="reports-image">
