--- a/client/views/partials/reports/expiryTrucks.html
+++ b/client/views/partials/reports/expiryTrucks.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getTruckExpirs();">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getTruckExpirs();getAllTrucks()">
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel" ui-sref="reports">
             <div class="reports-image">
