--- a/client/views/partials/settings/SecretKeys.html
+++ b/client/views/partials/settings/SecretKeys.html
@@ -5,6 +5,7 @@
                 <thead>
                 <tr>
                     <td><b>S.No</b></td>
+                    <td><b>Date</b></td>
                     <td><b>Secret</b></td>
                     <td><b>Counter</b></td>
                 </tr>
@@ -12,6 +13,9 @@
                 <tr ng-repeat="secret in secretKeys" style="text-align: center;">
                     <td>
                         {{$index+1}}
+                    </td>
+                    <td>
+                        {{secret.date}}
                     </td>
                     <td class="clickable-item">
                         <span>{{ secret.secretId.secret }}</span>
