added email to secrets schema

--- a/client/views/partials/settings/gpsSettings.html
+++ b/client/views/partials/settings/gpsSettings.html
@@ -87,6 +87,7 @@
                     </div>
                     <div class="">
                         <input type="text" class="form-control" placeholder="secret key" ng-model="secretkey">
+                        <input type="text" class="form-control mt-5" placeholder="Email" ng-model="email">
                         <button class="btn btn-danger mt-20" type="submit" ng-click="addSecret()">Add Secret Key</button>
                         <button class="btn btn-primary pull-right mt-20" type="submit" ui-sref="secretKeys">View Secret Keys</button>
                     </div>
