--- a/client/views/partials/admin/adminLogin.html
+++ b/client/views/partials/admin/adminLogin.html
@@ -4,15 +4,15 @@
         <ul class="login-form">
 
             <li class="form-group">
-                <input type="text" class="form-control custom-form-control" name="userName"
+                <input type="text" class="form-control login-form-control" name="userName"
                        placeholder="User Name"/>
             </li>
             <li class="form-group">
-                <input type="text" class="form-control custom-form-control" name="password"
+                <input type="text" class="form-control login-form-control" name="password"
                        placeholder="Password"/>
             </li>
             <li class="form-group">
-                <input type="text" class="form-control custom-form-control" name="mobileNum"
+                <input type="text" class="form-control login-form-control" name="mobileNum"
                        placeholder="Mobile Num"/>
             </li>
             <li class="form-group">
