--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/adminStyles.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
     <link href="components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
+
 
 </head>
 
@@ -29,7 +31,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 pall-zero">
                 <div class="col-sm-2 col-xs-12 left-nav">
                     <adminleft-menu label="Dashboard"></adminleft-menu>
                     <adminleft-menu label="Customers" ui-sref="customers"></adminleft-menu>
@@ -38,18 +40,29 @@
                     <adminleft-menu label="Settings"></adminleft-menu>
                     <adminleft-menu label="Set Notifications"></adminleft-menu>
                     <adminleft-menu label="Admin"></adminleft-menu>
-
-
                     <div class="clearfix"></div>
                 </div>
-                <div class="col-xs-12 col-sm-10 right-nav">
+                <div class="col-xs-12 col-sm-10 right-nav pall-zero">
                     <ui-view></ui-view>
                 </div>
             </div>
+            <div class="clearfix"></div>
         </div>
 
     </div>
     <div class="clearfix"></div>
+    <div class="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 pall-zero">
+                    <p>
+                        Powered by easygaadi.com. All Rights Reserved.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <!--bower scripts-->
@@ -57,6 +70,8 @@
 <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="components/angular/angular.min.js"></script>
 <script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
 
 <!---Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
@@ -65,6 +80,7 @@
 
 <!---Directives--->
 <script src="js/directives/adminLeftNav.js"></script>
+<script src="js/directives/adminDatePicker.js"></script>
 
 </body>
 </html>
