--- a/client/css/adminStyles.css
+++ b/client/css/adminStyles.css
@@ -71,24 +71,21 @@
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
-
-html {
-    height: 100%;
+html{
+    height: 100% !important;
 }
-
 body {
     font-family: Gotham-Light !important;
     font-size: 14px !important;
     background-color: #fff;
     color: #000 !important;
-    height: 100%;
+    height: 100% !important;
 }
 
 .main-page {
     width: 100%;
-    height: 100%;
     padding: 0;
-    background-color: #ccc;
+    height: 100% !important;
 }
 
 .custom-navbar {
@@ -96,6 +93,7 @@ body {
     border-radius: 0 !important;
     height: 75px;
     margin: 0 !important;
+    border-bottom: 1px solid #CCCCCC !important;
 }
 
 .admin-login {
@@ -195,20 +193,23 @@ body {
 .cus-main{
     padding: 15px;
 }
-
 .custom-ul li{
-    padding: 10px 0;
+    padding: 10px 0 0;
     font-size: 13px;
     line-height: 31px;
+}
+.title-ul{
+    margin: 20px 0px 5px 0;
+    line-height: 30px;
 }
 .custom-ul li a{
     text-decoration: none;
     padding: 0 5px;
 }
-/*.active{*/
-    /*background-color: #c0c0c0;*/
-    /*color: #000;*/
-/*}*/
+.active{
+    background-color: #c0c0c0;
+    color: #000;
+}
 .custom-form-control{
     width: 65% !important;
     height: 35px;
@@ -312,4 +313,13 @@ body {
 .accordion-toggle:hover, .accordion-toggle:focus  {
 text-decoration: none !important;
     color: #c9302c;
+}
+.activated{
+    border-bottom: 2px solid #000;
+}
+footer{
+    background-color: #615f5f;
+    color: #fff;
+    height: 50px;
+    line-height: 50px;
 }
