--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -13,6 +13,7 @@
     <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
 
 
+
 </head>
 
 <body>
@@ -50,20 +51,16 @@
         </div>
 
     </div>
-    <div class="clearfix"></div>
-    <div class="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12 pall-zero">
-                    <p>
-                        Powered by easygaadi.com. All Rights Reserved.
-                    </p>
-                </div>
+</div>
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 pall-zero text-center">
+                    Powered by easygaadi.com. All Rights Reserved.
             </div>
         </div>
     </div>
-
-</div>
+</footer>
 
 <!--bower scripts-->
 <script src="components/jquery/dist/jquery.min.js"></script>
@@ -77,7 +74,7 @@
 <script src="js/adminApp.js"></script>
 
 <!---Controllers--->
-
+<script src="js/modules/admin/customerModule.js"></script>
 <!---Directives--->
 <script src="js/directives/adminLeftNav.js"></script>
 <script src="js/directives/adminDatePicker.js"></script>
