--- a/client/views/partials/admin/customers/createCustomer.html
+++ b/client/views/partials/admin/customers/createCustomer.html
@@ -1,8 +1,8 @@
-<div class="col-xs-12 newCust">
+<div class="col-xs-12 newCust" ng-controller="customerCtrl">
     <h4>Create Customer Leads</h4>
     <div class="col-xs-12">
     <uib-accordion>
-        <div uib-accordion-group class="panel-default" is-open="status.open">
+        <div uib-accordion-group class="panel-default" is-open="status.isFirstOpen">
             <uib-accordion-heading>
                 User Information <i class="pull-right glyphicon"
                                     ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
@@ -234,7 +234,7 @@
         </div>
     </uib-accordion>
         <div class="col-xs-12 save-btns">
-            <a href="#" class="btn btn-danger">Cancel</a>
+            <a href="#" class="btn btn-danger" ng-click="cancel()">Cancel</a>
             <a href="#" class="btn btn-primary">Submit</a>
 
         </div>
