--- a/client/views/partials/admin/customers/customers.html
+++ b/client/views/partials/admin/customers/customers.html
@@ -1,6 +1,6 @@
-<div class="col-xs-12 cus-main">
+<div class="col-xs-12 cus-main" ng-controller="customerCtrl">
     <ul class="list-inline custom-ul">
-        <li><a href="#">Customer Leads</a></li>
+        <li class="activated"><a href="#">Customer Leads</a></li>
         <li><a href="#">Truck Owners</a></li>
         <li><a href="#">Transporters</a></li>
         <li><a href="#">Commission Agent</a></li>
@@ -15,7 +15,7 @@
         </li>
 
     </ul>
-    <ul class="list-inline">
+    <ul class="list-inline title-ul">
         <li class="pull-left">Customers Leads</li>
         <li class="pull-right">
             <button class="btn btn-primary" ui-sref="createCustomer">Create New</button>
@@ -33,6 +33,107 @@
                 <option>Not Interested</option>
             </select>
         </li>
-
+<div class="clearfix"></div>
     </ul>
+<div class="clearfix"></div>
+    <table class="table table-bordered table-responsive mt-20">
+        <thead>
+        <tr>
+            <th>S No</th>
+            <th>ID</th>
+            <th>Customer Name</th>
+            <th>Type</th>
+            <th>Mobile</th>
+            <th>Reg Date</th>
+            <th>is Lead</th>
+            <th>ERP</th>
+            <th>GPS</th>
+            <th>Load</th>
+            <th>Lead Status</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>2889</td>
+            <td>Sravan Kumar</td>
+            <td>TO</td>
+            <td>9618485858</td>
+            <td>01/05/2017</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td class="col-xs-2"> <select class="form-control">
+                <option ng-repeat="item in leadStatus">{{item}}</option>
+            </select></td>
+            <td>Edit/Delete</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2889</td>
+            <td>Sravan Kumar</td>
+            <td>TO</td>
+            <td>9618485858</td>
+            <td>01/05/2017</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td class="col-xs-2"> <select class="form-control">
+                <option ng-repeat="item in leadStatus">{{item}}</option>
+            </select></td>
+            <td>Edit/Delete</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2889</td>
+            <td>Sravan Kumar</td>
+            <td>TO</td>
+            <td>9618485858</td>
+            <td>01/05/2017</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td class="col-xs-2"> <select class="form-control">
+                <option ng-repeat="item in leadStatus">{{item}}</option>
+            </select></td>
+            <td>Edit/Delete</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2889</td>
+            <td>Sravan Kumar</td>
+            <td>TO</td>
+            <td>9618485858</td>
+            <td>01/05/2017</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td class="col-xs-2"> <select class="form-control">
+                <option ng-repeat="item in leadStatus">{{item}}</option>
+            </select></td>
+            <td>Edit/Delete</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2889</td>
+            <td>Sravan Kumar</td>
+            <td>TO</td>
+            <td>9618485858</td>
+            <td>01/05/2017</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td class="col-xs-2"> <select class="form-control">
+                <option ng-repeat="item in leadStatus">{{item}}</option>
+            </select></td>
+            <td>Edit/Delete</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
