--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -48,7 +48,7 @@
                         <div class="remember">
                             <div class="checkbox">
                                 <label>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" ng-model="remember"  ng-change="rememberMe()">
                                     <span class="cr ntfns"><i class="cr-icon ntfns-icon fa fa-check"></i></span>
                                     Remember me
                                 </label>
