--- a/client/views/index.html
+++ b/client/views/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href=" components/ng-img-crop/compile/unminified/ng-img-crop.css">
     <link rel="stylesheet" href="components/angular-ui-select/dist/select.min.css">
     <link rel="stylesheet" type="text/css" href="css/select2.css">
+    <link rel="stylesheet" type="text/css" href="components/datatables.net-dt/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="components/datatables.net-responsive-dt/css/responsive.dataTables.min.css">
 </head>
 
 <body ng-app="EasyGaadi" ng-cloak>
@@ -128,6 +130,8 @@
 <script type="text/javascript" src="/components/ng-img-crop/compile/unminified/ng-img-crop.js"></script>
 <script src="components/angular-ui-select/dist/select.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
+<script type="text/javascript" src="components/datatables.net/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
 <!--app-->
 <script src="js/app.js"></script>
 
