--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -35,8 +35,8 @@
             <div class="col-xs-12 pall-zero">
                 <div class="col-sm-2 col-xs-12 left-nav">
                     <adminleft-menu label="Dashboard"></adminleft-menu>
-                    <adminleft-menu label="Customers" ui-sref="customers"></adminleft-menu>
-                    <adminleft-menu label="Services"></adminleft-menu>
+                    <adminleft-menu label="Customers" ui-sref="customers.customersLead"></adminleft-menu>
+                    <adminleft-menu label="Services" ui-sref="services.gpsAccounts"></adminleft-menu>
                     <adminleft-menu label="Order Process"></adminleft-menu>
                     <adminleft-menu label="Settings"></adminleft-menu>
                     <adminleft-menu label="Set Notifications"></adminleft-menu>
@@ -44,7 +44,7 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="col-xs-12 col-sm-10 right-nav pall-zero">
-                    <ui-view></ui-view>
+                   <div ui-view></div>
                 </div>
             </div>
             <div class="clearfix"></div>
